[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Host_Lobby.gd" type="Script" id=1]
[ext_resource path="res://Font/Xerox Sans Serif Wide Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Host_Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="labelHostName" type="Label" parent="."]
margin_left = 106.0
margin_top = 65.0
margin_right = 309.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "Host Name: You"

[node name="labelUserCount" type="Label" parent="."]
margin_left = 621.51
margin_top = 58.9706
margin_right = 824.51
margin_bottom = 87.9706
custom_fonts/font = SubResource( 1 )
text = "Total Players:"

[node name="labelLobbyPlayer" type="Label" parent="."]
margin_left = 99.0
margin_top = 130.0
margin_right = 345.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Lobby Players"

[node name="Start" type="Button" parent="."]
margin_left = 657.0
margin_top = 466.0
margin_right = 896.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="labelPlayers" type="Label" parent="."]
margin_left = 93.0
margin_top = 199.0
margin_right = 496.0
margin_bottom = 564.0
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
